--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,23 +26,46 @@ li {
 }
 
 ul.movies-wrap {
+  /* display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px; */
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-around;
 }
-ul.movies-wrap li {
+ul.movies-wrap li.movie {
   padding: 5px;
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  cursor: pointer;
 }
-ul.movies-wrap li img {
-  width: 100%;
-  border-radius: 3px;
+ul.movies-wrap li.movie .flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+ul.movies-wrap li.movie h4 {
+  margin: 20px 0;
+  width: 154px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 26px;
+  white-space: nowrap;
+}
+ul.movies-wrap li.movie img {
+  max-width: 100%;
+  border-radius: 12px;
+  transition: transform 0.2s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
+ul.movies-wrap li.movie:hover img {
+  transform: scale(1.05) translateY(-10px);
+}
 nav.header-wrap {
   height: 100px;
   display: flex;
